[project]
name = "resource_scheduler"
authors = [
    { name = "Operations", email = "ops@hpautomation.in" }
]
description = "Visual Resource Allocation Matrix Dashboard for Engineers"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
